name:                haskell-trace
version:             0.0.0
synopsis:            Add tracing to modules.
description:         Add tracing to modules.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2015 Chris Done
category:            Development
build-type:          Simple
cabal-version:       >= 1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Language.Haskell.Trace
                     Language.Haskell.Trace.Preprocessor
  build-depends:     base >= 4 && <5
                   , haskell-src-exts
                   , text

executable haskell-trace
  hs-source-dirs:    src/main/
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5
                   , haskell-src-exts
                   , haskell-trace
